--- a/html.html
+++ b/html.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <title>Document</title>
-        <link rel="stylesheet" href="app.css" />
+        <link rel="stylesheet" href="css.css" />
     </head>
     <body>
         <div class="container">
@@ -20,6 +20,6 @@
             </div>
             <ul id="charactersList"></ul>
         </div>
-        <script src="app.js"></script>
+        <script src="javascript.js"></script>
     </body>
 </html>
