updated the html file name and js file name

--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
             </div>
             <ul id="charactersList"></ul>
         </div>
-        <script src="javascript.js"></script>
+        <script src="js.js"></script>
     </body>
 </html>
